@@ -18,17 +18,17 @@
 package org.jackhuang.hmcl.ui.versions;
 
 import com.jfoenix.controls.*;
-import com.jfoenix.controls.datamodels.treetable.RecursiveTreeObject;
 import javafx.animation.PauseTransition;
 import javafx.beans.binding.Bindings;
 import javafx.beans.property.BooleanProperty;
+import javafx.beans.property.ObjectProperty;
+import javafx.beans.value.ChangeListener;
 import javafx.collections.ListChangeListener;
+import javafx.css.PseudoClass;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
 import javafx.scene.Node;
-import javafx.scene.control.Label;
-import javafx.scene.control.SelectionMode;
-import javafx.scene.control.SkinBase;
+import javafx.scene.control.*;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.input.KeyCode;
@@ -36,6 +36,7 @@ import javafx.scene.input.KeyEvent;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.Priority;
 import javafx.scene.layout.StackPane;
+import javafx.stage.Stage;
 import javafx.util.Duration;
 import org.jackhuang.hmcl.mod.LocalModFile;
 import org.jackhuang.hmcl.mod.ModLoaderType;
@@ -45,6 +46,7 @@ import org.jackhuang.hmcl.mod.curse.CurseForgeRemoteModRepository;
 import org.jackhuang.hmcl.mod.modrinth.ModrinthRemoteModRepository;
 import org.jackhuang.hmcl.setting.Profile;
 import org.jackhuang.hmcl.setting.Theme;
+import org.jackhuang.hmcl.setting.VersionIconType;
 import org.jackhuang.hmcl.task.Schedulers;
 import org.jackhuang.hmcl.task.Task;
 import org.jackhuang.hmcl.ui.Controllers;
@@ -53,35 +55,32 @@ import org.jackhuang.hmcl.ui.SVG;
 import org.jackhuang.hmcl.ui.animation.ContainerAnimations;
 import org.jackhuang.hmcl.ui.animation.TransitionPane;
 import org.jackhuang.hmcl.ui.construct.*;
-import org.jackhuang.hmcl.util.Holder;
-import org.jackhuang.hmcl.util.Lazy;
-import org.jackhuang.hmcl.util.Pair;
-import org.jackhuang.hmcl.util.StringUtils;
+import org.jackhuang.hmcl.util.*;
 import org.jackhuang.hmcl.util.i18n.I18n;
 import org.jackhuang.hmcl.util.io.CompressingUtils;
 import org.jackhuang.hmcl.util.io.FileUtils;
 import org.jackhuang.hmcl.util.io.NetworkUtils;
-import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import java.lang.ref.SoftReference;
+import java.lang.ref.WeakReference;
 import java.nio.file.FileSystem;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.*;
+import java.util.concurrent.CompletableFuture;
 import java.util.function.Predicate;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import static org.jackhuang.hmcl.ui.FXUtils.ignoreEvent;
 import static org.jackhuang.hmcl.ui.FXUtils.onEscPressed;
 import static org.jackhuang.hmcl.ui.ToolbarListPageSkin.createToolbarButton2;
 import static org.jackhuang.hmcl.util.Lang.mapOf;
 import static org.jackhuang.hmcl.util.Pair.pair;
-import static org.jackhuang.hmcl.util.StringUtils.isNotBlank;
 import static org.jackhuang.hmcl.util.i18n.I18n.i18n;
 import static org.jackhuang.hmcl.util.logging.Logger.LOG;
 
-class ModListPageSkin extends SkinBase<ModListPage> {
+final class ModListPageSkin extends SkinBase<ModListPage> {
 
     private final TransitionPane toolbarPane;
     private final HBox searchBar;
@@ -94,6 +93,9 @@ class ModListPageSkin extends SkinBase<ModListPage> {
     // FXThread
     private boolean isSearching = false;
 
+    @SuppressWarnings({"FieldCanBeLocal", "unused"})
+    private final ChangeListener<Boolean> holder;
+
     ModListPageSkin(ModListPage skinnable) {
         super(skinnable);
 
@@ -104,6 +106,12 @@ class ModListPageSkin extends SkinBase<ModListPage> {
         ComponentList root = new ComponentList();
         root.getStyleClass().add("no-padding");
         listView = new JFXListView<>();
+
+        this.holder = FXUtils.onWeakChange(skinnable.loadingProperty(), loading -> {
+            if (!loading) {
+                listView.scrollTo(0);
+            }
+        });
 
         {
             toolbarPane = new TransitionPane();
@@ -272,139 +280,180 @@ class ModListPageSkin extends SkinBase<ModListPage> {
                         || predicate.test(modInfo.getGameVersion())
                         || predicate.test(modInfo.getId())
                         || predicate.test(Objects.toString(modInfo.getModLoaderType()))
-                        || predicate.test((item.getMod() != null ? item.getMod().getDisplayName() : null))) {
+                        || predicate.test((item.getModTranslations() != null ? item.getModTranslations().getDisplayName() : null))) {
                     listView.getItems().add(item);
                 }
             }
         }
     }
 
-    static class ModInfoObject extends RecursiveTreeObject<ModInfoObject> implements Comparable<ModInfoObject> {
+    static final class ModInfoObject {
         private final BooleanProperty active;
         private final LocalModFile localModFile;
-        private final String title;
-        private final String message;
-        private final ModTranslations.Mod mod;
+        private final @Nullable ModTranslations.Mod modTranslations;
+
+        private SoftReference<CompletableFuture<Image>> iconCache;
 
         ModInfoObject(LocalModFile localModFile) {
             this.localModFile = localModFile;
             this.active = localModFile.activeProperty();
 
-            StringBuilder title = new StringBuilder(localModFile.getName());
-            if (isNotBlank(localModFile.getVersion()))
-                title.append(" ").append(localModFile.getVersion());
-            this.title = title.toString();
-
-            StringBuilder message = new StringBuilder(localModFile.getFileName());
-            if (isNotBlank(localModFile.getGameVersion()))
-                message.append(", ").append(i18n("mods.game.version")).append(": ").append(localModFile.getGameVersion());
-            if (isNotBlank(localModFile.getAuthors()))
-                message.append(", ").append(i18n("archive.author")).append(": ").append(localModFile.getAuthors());
-            this.message = message.toString();
-
-            this.mod = ModTranslations.MOD.getModById(localModFile.getId());
-        }
-
-        String getTitle() {
-            return title;
-        }
-
-        String getSubtitle() {
-            return message;
+            this.modTranslations = ModTranslations.MOD.getMod(localModFile.getId(), localModFile.getName());
         }
 
         LocalModFile getModInfo() {
             return localModFile;
         }
 
-        public ModTranslations.Mod getMod() {
-            return mod;
+        public @Nullable ModTranslations.Mod getModTranslations() {
+            return modTranslations;
         }
 
-        @Override
-        public int compareTo(@NotNull ModListPageSkin.ModInfoObject o) {
-            return localModFile.getFileName().toLowerCase().compareTo(o.localModFile.getFileName().toLowerCase());
+        @FXThread
+        private Image loadIcon() {
+            List<String> iconPaths = new ArrayList<>();
+
+            if (StringUtils.isNotBlank(this.localModFile.getLogoPath())) {
+                iconPaths.add(this.localModFile.getLogoPath());
+            }
+
+            iconPaths.addAll(List.of(
+                    "icon.png",
+                    "logo.png",
+                    "mod_logo.png",
+                    "pack.png",
+                    "logoFile.png",
+                    "assets/icon.png",
+                    "assets/logo.png",
+                    "assets/mod_icon.png",
+                    "assets/mod_logo.png",
+                    "META-INF/icon.png",
+                    "META-INF/logo.png",
+                    "META-INF/mod_icon.png",
+                    "textures/icon.png",
+                    "textures/logo.png",
+                    "textures/mod_icon.png",
+                    "resources/icon.png",
+                    "resources/logo.png",
+                    "resources/mod_icon.png"
+            ));
+
+            String modId = this.localModFile.getId();
+            if (StringUtils.isNotBlank(modId)) {
+                iconPaths.addAll(List.of(
+                        "assets/" + modId + "/icon.png",
+                        "assets/" + modId + "/logo.png",
+                        "assets/" + modId.replace("-", "") + "/icon.png",
+                        "assets/" + modId.replace("-", "") + "/logo.png",
+                        modId + ".png",
+                        modId + "-logo.png",
+                        modId + "-icon.png",
+                        modId + "_logo.png",
+                        modId + "_icon.png",
+                        "textures/" + modId + "/icon.png",
+                        "textures/" + modId + "/logo.png",
+                        "resources/" + modId + "/icon.png",
+                        "resources/" + modId + "/logo.png"
+                ));
+            }
+
+            try (FileSystem fs = CompressingUtils.createReadOnlyZipFileSystem(this.localModFile.getFile())) {
+                for (String path : iconPaths) {
+                    Path iconPath = fs.getPath(path);
+                    if (Files.exists(iconPath)) {
+                        Image image = FXUtils.loadImage(iconPath, 80, 80, true, true);
+                        if (!image.isError() && image.getWidth() > 0 && image.getHeight() > 0 &&
+                                Math.abs(image.getWidth() - image.getHeight()) < 1) {
+                            return image;
+                        }
+                    }
+                }
+            } catch (Exception e) {
+                LOG.warning("Failed to load mod icons", e);
+            }
+
+            return VersionIconType.getIconType(this.localModFile.getModLoaderType()).getIcon();
+        }
+
+        public void loadIcon(ImageView imageView, @Nullable WeakReference<ObjectProperty<ModInfoObject>> current) {
+            SoftReference<CompletableFuture<Image>> iconCache = this.iconCache;
+            CompletableFuture<Image> imageFuture;
+            if (iconCache != null && (imageFuture = iconCache.get()) != null) {
+                Image image = imageFuture.getNow(null);
+                if (image != null) {
+                    imageView.setImage(image);
+                    return;
+                }
+            } else {
+                imageFuture = CompletableFuture.supplyAsync(this::loadIcon, Schedulers.io());
+                this.iconCache = new SoftReference<>(imageFuture);
+            }
+            imageView.setImage(VersionIconType.getIconType(localModFile.getModLoaderType()).getIcon());
+            imageFuture.thenAcceptAsync(image -> {
+                if (current != null) {
+                    ObjectProperty<ModInfoObject> infoObjectProperty = current.get();
+                    if (infoObjectProperty == null || infoObjectProperty.get() != this) {
+                        // The current ListCell has already switched to another object
+                        return;
+                    }
+                }
+
+                imageView.setImage(image);
+            }, Schedulers.javafx());
         }
     }
 
-    class ModInfoDialog extends JFXDialogLayout {
+    final class ModInfoDialog extends JFXDialogLayout {
 
         ModInfoDialog(ModInfoObject modInfo) {
             HBox titleContainer = new HBox();
             titleContainer.setSpacing(8);
 
+            Stage stage = Controllers.getStage();
+            maxWidthProperty().bind(stage.widthProperty().multiply(0.7));
+
             ImageView imageView = new ImageView();
-            Task.supplyAsync(() -> {
-                try (FileSystem fs = CompressingUtils.createReadOnlyZipFileSystem(modInfo.getModInfo().getFile())) {
-                    String logoPath = modInfo.getModInfo().getLogoPath();
-                    if (StringUtils.isNotBlank(logoPath)) {
-                        Path iconPath = fs.getPath(logoPath);
-                        if (Files.exists(iconPath)) {
-                            try {
-                                Image image = FXUtils.loadImage(iconPath, 40, 40, true, true);
-                                if (!image.isError() && image.getWidth() == image.getHeight())
-                                    return image;
-                            } catch (Throwable e) {
-                                LOG.warning("Failed to load image " + logoPath, e);
-                            }
-                        }
-                    }
-
-                    List<String> defaultPaths = new ArrayList<>(Arrays.asList(
-                            "icon.png",
-                            "logo.png",
-                            "mod_logo.png",
-                            "pack.png",
-                            "logoFile.png"
-                    ));
-
-                    String id = modInfo.getModInfo().getId();
-                    if (StringUtils.isNotBlank(id)) {
-                        defaultPaths.addAll(Arrays.asList(
-                                "assets/" + id + "/icon.png",
-                                "assets/" + id.replace("-", "") + "/icon.png",
-                                id + ".png",
-                                id + "-logo.png",
-                                id + "-icon.png",
-                                id + "_logo.png",
-                                id + "_icon.png"
-                        ));
-                    }
-
-                    for (String path : defaultPaths) {
-                        Path iconPath = fs.getPath(path);
-                        if (Files.exists(iconPath)) {
-                            Image image = FXUtils.loadImage(iconPath, 40, 40, true, true);
-                            if (!image.isError() && image.getWidth() == image.getHeight())
-                                return image;
-                        }
-                    }
-                } catch (Exception e) {
-                    LOG.warning("Failed to load icon", e);
-                }
-
-                return null;
-            }).whenComplete(Schedulers.javafx(), (image, exception) -> {
-                if (image != null) {
-                    imageView.setImage(image);
-                } else {
-                    imageView.setImage(FXUtils.newBuiltinImage("/assets/img/command.png", 40, 40, true, true));
-                }
-            }).start();
+            FXUtils.limitSize(imageView, 40, 40);
+            modInfo.loadIcon(imageView, null);
 
             TwoLineListItem title = new TwoLineListItem();
-            title.setTitle(modInfo.getModInfo().getName());
-            if (StringUtils.isNotBlank(modInfo.getModInfo().getVersion())) {
-                title.addTag(modInfo.getModInfo().getVersion());
+            if (modInfo.getModTranslations() != null && I18n.isUseChinese())
+                title.setTitle(modInfo.getModTranslations().getDisplayName());
+            else
+                title.setTitle(modInfo.getModInfo().getName());
+
+            StringJoiner subtitle = new StringJoiner(" | ");
+            subtitle.add(FileUtils.getName(modInfo.getModInfo().getFile()));
+            if (StringUtils.isNotBlank(modInfo.getModInfo().getGameVersion())) {
+                subtitle.add(modInfo.getModInfo().getGameVersion());
             }
-            title.setSubtitle(FileUtils.getName(modInfo.getModInfo().getFile()));
+            if (StringUtils.isNotBlank(modInfo.getModInfo().getVersion())) {
+                subtitle.add(modInfo.getModInfo().getVersion());
+            }
+            if (StringUtils.isNotBlank(modInfo.getModInfo().getAuthors())) {
+                subtitle.add(i18n("archive.author") + ": " + modInfo.getModInfo().getAuthors());
+            }
+            title.setSubtitle(subtitle.toString());
 
             titleContainer.getChildren().setAll(FXUtils.limitingSize(imageView, 40, 40), title);
             setHeading(titleContainer);
 
             Label description = new Label(modInfo.getModInfo().getDescription().toString());
+            description.setWrapText(true);
             FXUtils.copyOnDoubleClick(description);
-            setBody(description);
+
+            ScrollPane descriptionPane = new ScrollPane(description);
+            FXUtils.smoothScrolling(descriptionPane);
+            descriptionPane.setHbarPolicy(ScrollPane.ScrollBarPolicy.NEVER);
+            descriptionPane.setVbarPolicy(ScrollPane.ScrollBarPolicy.AS_NEEDED);
+            descriptionPane.setFitToWidth(true);
+            description.heightProperty().addListener((obs, oldVal, newVal) -> {
+                double maxHeight = stage.getHeight() * 0.5;
+                double targetHeight = Math.min(newVal.doubleValue(), maxHeight);
+                descriptionPane.setPrefViewportHeight(targetHeight);
+            });
+
+            setBody(descriptionPane);
 
             if (StringUtils.isNotBlank(modInfo.getModInfo().getId())) {
                 for (Pair<String, ? extends RemoteModRepository> item : Arrays.asList(
@@ -454,7 +503,7 @@ class ModListPageSkin extends SkinBase<ModListPage> {
                                     Controllers.navigate(new DownloadPage(
                                             repository instanceof CurseForgeRemoteModRepository ? HMCLLocalizedDownloadListPage.ofCurseForgeMod(null, false) : HMCLLocalizedDownloadListPage.ofModrinthMod(null, false),
                                             remoteMod,
-                                            new Profile.ProfileVersion(ModListPageSkin.this.getSkinnable().getProfile(), ModListPageSkin.this.getSkinnable().getVersionId()),
+                                            new Profile.ProfileVersion(ModListPageSkin.this.getSkinnable().getProfile(), ModListPageSkin.this.getSkinnable().getInstanceId()),
                                             (profile, version, file) -> org.jackhuang.hmcl.ui.download.DownloadPage.download(profile, version, file, "mods")
                                     ));
                                 });
@@ -477,7 +526,7 @@ class ModListPageSkin extends SkinBase<ModListPage> {
                 getActions().add(officialPageButton);
             }
 
-            if (modInfo.getMod() == null || StringUtils.isBlank(modInfo.getMod().getMcmod())) {
+            if (modInfo.getModTranslations() == null || StringUtils.isBlank(modInfo.getModTranslations().getMcmod())) {
                 JFXHyperlink searchButton = new JFXHyperlink(i18n("mods.mcmod.search"));
                 searchButton.setOnAction(e -> {
                     fireEvent(new DialogCloseEvent());
@@ -492,7 +541,7 @@ class ModListPageSkin extends SkinBase<ModListPage> {
                 JFXHyperlink mcmodButton = new JFXHyperlink(i18n("mods.mcmod.page"));
                 mcmodButton.setOnAction(e -> {
                     fireEvent(new DialogCloseEvent());
-                    FXUtils.openLink(ModTranslations.MOD.getMcmodUrl(modInfo.getMod()));
+                    FXUtils.openLink(ModTranslations.MOD.getMcmodUrl(modInfo.getModTranslations()));
                 });
                 getActions().add(mcmodButton);
             }
@@ -511,15 +560,22 @@ class ModListPageSkin extends SkinBase<ModListPage> {
     private static final Lazy<JFXPopup> popup = new Lazy<>(() -> new JFXPopup(menu.get()));
 
     final class ModInfoListCell extends MDListCell<ModInfoObject> {
+        private static final PseudoClass WARNING = PseudoClass.getPseudoClass("warning");
+
         JFXCheckBox checkBox = new JFXCheckBox();
+        ImageView imageView = new ImageView();
         TwoLineListItem content = new TwoLineListItem();
         JFXButton restoreButton = new JFXButton();
         JFXButton infoButton = new JFXButton();
         JFXButton revealButton = new JFXButton();
         BooleanProperty booleanProperty;
 
+        Tooltip warningTooltip;
+
         ModInfoListCell(JFXListView<ModInfoObject> listView, Holder<Object> lastCell) {
             super(listView, lastCell);
+
+            this.getStyleClass().add("mod-info-list-cell");
 
             HBox container = new HBox(8);
             container.setPickOnBounds(false);
@@ -527,6 +583,11 @@ class ModListPageSkin extends SkinBase<ModListPage> {
             HBox.setHgrow(content, Priority.ALWAYS);
             content.setMouseTransparent(true);
             setSelectable();
+
+            imageView.setFitWidth(24);
+            imageView.setFitHeight(24);
+            imageView.setPreserveRatio(true);
+            imageView.setImage(VersionIconType.COMMAND.getIcon());
 
             restoreButton.getStyleClass().add("toggle-icon4");
             restoreButton.setGraphic(FXUtils.limitingSize(SVG.RESTORE.createIcon(Theme.blackFill(), 24), 24, 24));
@@ -539,7 +600,7 @@ class ModListPageSkin extends SkinBase<ModListPage> {
             infoButton.getStyleClass().add("toggle-icon4");
             infoButton.setGraphic(FXUtils.limitingSize(SVG.INFO.createIcon(Theme.blackFill(), 24), 24, 24));
 
-            container.getChildren().setAll(checkBox, content, restoreButton, revealButton, infoButton);
+            container.getChildren().setAll(checkBox, imageView, content, restoreButton, revealButton, infoButton);
 
             StackPane.setMargin(container, new Insets(8));
             getContainer().getChildren().setAll(container);
@@ -547,50 +608,113 @@ class ModListPageSkin extends SkinBase<ModListPage> {
 
         @Override
         protected void updateControl(ModInfoObject dataItem, boolean empty) {
+            pseudoClassStateChanged(WARNING, false);
+            if (warningTooltip != null) {
+                Tooltip.uninstall(this, warningTooltip);
+                warningTooltip = null;
+            }
+
             if (empty) return;
-            content.setTitle(dataItem.getTitle());
+
+            List<String> warning = new ArrayList<>();
+
             content.getTags().clear();
-            switch (dataItem.getModInfo().getModLoaderType()) {
-                case FORGE:
-                    content.addTag(i18n("install.installer.forge"));
-                    break;
-                case CLEANROOM:
-                    content.addTag(i18n("install.installer.cleanroom"));
-                    break;
-                case NEO_FORGED:
-                    content.addTag(i18n("install.installer.neoforge"));
-                    break;
-                case FABRIC:
-                    content.addTag(i18n("install.installer.fabric"));
-                    break;
-                case LITE_LOADER:
-                    content.addTag(i18n("install.installer.liteloader"));
-                    break;
-                case QUILT:
-                    content.addTag(i18n("install.installer.quilt"));
-                    break;
+
+            LocalModFile modInfo = dataItem.getModInfo();
+            ModTranslations.Mod modTranslations = dataItem.getModTranslations();
+
+            ModLoaderType modLoaderType = modInfo.getModLoaderType();
+
+            dataItem.loadIcon(imageView, new WeakReference<>(this.itemProperty()));
+
+            String displayName = modInfo.getName();
+            if (modTranslations != null && I18n.isUseChinese()) {
+                String chineseName = modTranslations.getName();
+                if (StringUtils.containsChinese(chineseName)) {
+                    if (StringUtils.containsEmoji(chineseName)) {
+                        StringBuilder builder = new StringBuilder();
+
+                        chineseName.codePoints().forEach(ch -> {
+                            if (ch < 0x1F300 || ch > 0x1FAFF)
+                                builder.appendCodePoint(ch);
+                        });
+
+                        chineseName = builder.toString().trim();
+                    }
+
+                    if (StringUtils.isNotBlank(chineseName) && !displayName.equalsIgnoreCase(chineseName)) {
+                        displayName = displayName + " (" + chineseName + ")";
+                    }
+                }
             }
-            if (dataItem.getMod() != null && I18n.isUseChinese()) {
-                content.addTag(dataItem.getMod().getDisplayName());
+            content.setTitle(displayName);
+
+            StringJoiner joiner = new StringJoiner(" | ");
+            if (modLoaderType != ModLoaderType.UNKNOWN && StringUtils.isNotBlank(modInfo.getId()))
+                joiner.add(modInfo.getId());
+
+            joiner.add(FileUtils.getName(modInfo.getFile()));
+
+            content.setSubtitle(joiner.toString());
+
+            if (modLoaderType == ModLoaderType.UNKNOWN) {
+                content.addTagWarning(i18n("mods.unknown"));
+            } else if (!ModListPageSkin.this.getSkinnable().supportedLoaders.contains(modLoaderType)) {
+                warning.add(i18n("mods.warning.loader_mismatch"));
+                switch (dataItem.getModInfo().getModLoaderType()) {
+                    case FORGE:
+                        content.addTagWarning(i18n("install.installer.forge"));
+                        break;
+                    case CLEANROOM:
+                        content.addTagWarning(i18n("install.installer.cleanroom"));
+                        break;
+                    case NEO_FORGED:
+                        content.addTagWarning(i18n("install.installer.neoforge"));
+                        break;
+                    case FABRIC:
+                        content.addTagWarning(i18n("install.installer.fabric"));
+                        break;
+                    case LITE_LOADER:
+                        content.addTagWarning(i18n("install.installer.liteloader"));
+                        break;
+                    case QUILT:
+                        content.addTagWarning(i18n("install.installer.quilt"));
+                        break;
+                }
             }
-            content.setSubtitle(dataItem.getSubtitle());
+
+            String modVersion = modInfo.getVersion();
+            if (StringUtils.isNotBlank(modVersion) && !"${version}".equals(modVersion)) {
+                content.addTag(modVersion);
+            }
+
             if (booleanProperty != null) {
                 checkBox.selectedProperty().unbindBidirectional(booleanProperty);
             }
             checkBox.selectedProperty().bindBidirectional(booleanProperty = dataItem.active);
-            restoreButton.setVisible(!dataItem.getModInfo().getMod().getOldFiles().isEmpty());
+            restoreButton.setVisible(!modInfo.getMod().getOldFiles().isEmpty());
             restoreButton.setOnAction(e -> {
-                menu.get().getContent().setAll(dataItem.getModInfo().getMod().getOldFiles().stream()
+                menu.get().getContent().setAll(modInfo.getMod().getOldFiles().stream()
                         .map(localModFile -> new IconedMenuItem(null, localModFile.getVersion(),
-                                () -> getSkinnable().rollback(dataItem.getModInfo(), localModFile),
+                                () -> getSkinnable().rollback(modInfo, localModFile),
                                 popup.get()))
-                        .collect(Collectors.toList())
+                        .toList()
                 );
 
                 popup.get().show(restoreButton, JFXPopup.PopupVPosition.TOP, JFXPopup.PopupHPosition.RIGHT, 0, restoreButton.getHeight());
             });
-            revealButton.setOnAction(e -> FXUtils.showFileInExplorer(dataItem.getModInfo().getFile()));
+            revealButton.setOnAction(e -> FXUtils.showFileInExplorer(modInfo.getFile()));
             infoButton.setOnAction(e -> Controllers.dialog(new ModInfoDialog(dataItem)));
+
+            if (!warning.isEmpty()) {
+                pseudoClassStateChanged(WARNING, true);
+
+                //noinspection ConstantValue
+                this.warningTooltip = warning.size() == 1
+                        ? new Tooltip(warning.get(0))
+                        : new Tooltip(String.join("\n", warning));
+                FXUtils.installFastTooltip(this, warningTooltip);
+            }
         }
     }
 }
